--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQo6Kr5FeQazaH6kBysSvz1pc1WPJ8KcXyb0A&s">
         <P>Oliver Barragan</P>
-        <p>Who.. are we. such a simple yet complex question, & today i will try and do the inposable and show you  "Who i am" Too start on Am just a regular teenager. That used to love playing video games daily but, now has moved on on too bigger and better things. On top of that, I am Who shall have exacuted his biggest personal goal which is. To Abliderate the  </p>
+        <p>Who.. are we. such a simple yet complex question, & today i will try and do the impossible &, show you  "Who i am" Too start with am just a regular teenager. That used to love playing video games but, now has moved on on too bigger and better things. On top of that, I am Who shall have exacuted his biggest personal goal which is. To Abliderate the bounderys placed upon me and, perfiectly run and make many wed sites to puch out my products   </p>
 
 
 
