--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQo6Kr5FeQazaH6kBysSvz1pc1WPJ8KcXyb0A&s">
-        <P>Oliver Barragan</P>
+        <h1>Oliver Barragan</h1>
         <p>Who.. are we. such a simple yet complex question, & today i will try and do the impossible &, show you  "Who i am" Too start with am just a regular teenager. That used to love playing video games but, now has moved on on too bigger and better things. On top of that, I am Who shall have exacuted his biggest personal goal which is. To Abliderate the bounderys placed upon me and, perfiectly run and make many wedsites to push out my products </p>
         <p>
             List of things that kind of symbolizes me
@@ -22,6 +22,7 @@
             IF i had to choose my favorite wedsite i made so far i would have to choose this one- <a href="https://wmerimkwih-2836475633-a.codehs.me/index.html">Favorite wedsite</a>>
         </p>
     <table border="1">
+        <h1>WWeekly scheduale</h1>
         <tr>
             <th>Monday</th>
             <th>tusday</th>
@@ -31,9 +32,7 @@
             <th>saturday</th>
             <th>Sunday</th>
         </tr>
-        <p>
-            this week schedule
-        </p>
+
         <tr>
             <tb>School & work</tb>
             <tb>School & wor</tb>
